--- a/binary_search.ipynb
+++ b/binary_search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOT2ddNKYMUTftgODwtXz4r",
+      "authorship_tag": "ABX9TyNyir/fTxfuttnvDK/cn4xq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,123 +27,45 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "## Binary Search\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "czOcXPqHcviT"
-      }
-    },
-    {
       "cell_type": "code",
-      "source": [
-        "names = ['Amy', 'Jessie', 'Andrew', 'Maria', 'Kaio']"
-      ],
-      "metadata": {
-        "id": "SeeJEhi9cyup"
-      },
       "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def binary_search(names, name):\n",
-        "  names = sorted(names)\n",
-        "  print(names)\n",
-        "  low = 0\n",
-        "  high = len(names) - 1\n",
-        "  while low <= high:\n",
-        "    mid = (low + high) // 2\n",
-        "    # guess\n",
-        "    guess = names[mid]\n",
-        "    if guess == name:\n",
-        "      return mid\n",
-        "    if guess > name:\n",
-        "      high = mid - 1\n",
-        "    else:\n",
-        "      low = mid + 1\n",
-        "  return None"
-      ],
       "metadata": {
-        "id": "fWmOp2b6dLJJ"
+        "id": "zayh66QPn3-U"
       },
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "outputs": [],
       "source": [
-        "find_maria = binary_search(names, 'Maria')\n",
-        "print(find_maria)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8VUTEwLIfJb6",
-        "outputId": "ff23fc72-47d2-4600-e4ab-00acddb5e973"
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['Amy', 'Andrew', 'Jessie', 'Kaio', 'Maria']\n",
-            "4\n"
-          ]
-        }
+        "def binary_search(nums, target):\n",
+        "    left, right = 0, len(nums) - 1\n",
+        "    while left <= right:\n",
+        "        mid = (left + right) // 2\n",
+        "        if nums[mid] == target:\n",
+        "            return mid\n",
+        "        elif nums[mid] < target:\n",
+        "            left = mid + 1\n",
+        "        else:\n",
+        "            right = mid - 1\n",
+        "    return -1"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "find_kaio = binary_search(names, 'Kaio')\n",
-        "print(find_kaio)"
+        "print(binary_search([2,3,4], 4))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "RAFUwCD0fO4l",
-        "outputId": "c7a678f9-ecd2-4510-d3ff-204c19c773db"
+        "id": "Q6jBz21-n_OY",
+        "outputId": "1fb6253d-899a-460b-8457-a791030101cb"
       },
-      "execution_count": 21,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Amy', 'Andrew', 'Jessie', 'Kaio', 'Maria']\n",
-            "3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "find_iza = binary_search(names, 'Iza')\n",
-        "print(find_iza)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "arjUzaK8fYU7",
-        "outputId": "4664fa59-89f4-49e7-e9ef-f69891e2b6b9"
-      },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['Amy', 'Andrew', 'Jessie', 'Kaio', 'Maria']\n",
-            "None\n"
+            "2\n"
           ]
         }
       ]
