--- a/Double_LinkedList.ipynb
+++ b/Double_LinkedList.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDLg+EGmzrMGmyCZuMYbHr"
+      "authorship_tag": "ABX9TyNOrpCjrJRZu6/R2q2EOtpc",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mariahelenass/DataStructures/blob/main/Double_LinkedList.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -53,7 +64,7 @@
         "            self.root = new_node\n",
         "        self.tail = new_node\n",
         "\n",
-        "    def remove_from_front(self, value) -> int:\n",
+        "    def remove_from_front(self) -> int:\n",
         "        if not self.root:\n",
         "            return None\n",
         "        remover = self.root.value\n",
@@ -64,7 +75,7 @@
         "            self.tail = None\n",
         "        return remover\n",
         "\n",
-        "    def remove_from_end(self, value) -> int:\n",
+        "    def remove_from_end(self) -> int:\n",
         "        if not self.tail:\n",
         "            return None\n",
         "        remover = self.tail.value\n",
